Fixing Warnings and minor tweaks